<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_height"
        android:layout_marginTop="@dimen/fragment_padding"
        android:layout_marginBottom="@dimen/fragment_padding"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/user_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_padding"
        android:text="@string/profile_name"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image" />

    <TextView
        android:id="@+id/post_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_padding"
        android:layout_marginTop="@dimen/fragment_padding"
        android:text="@string/post_description"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_name_text" />

</androidx.constraintlayout.widget.ConstraintLayout>