<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fragment_padding">

    <ImageView
        android:id="@+id/image_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fragment_padding"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/user_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name_text"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:text="@string/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_layout" />

    <TextView
        android:id="@+id/following_text"
        style="@style/text_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:text="Folowing: "
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintEnd_toStartOf="@+id/following_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

    <TextView
        android:id="@+id/following_number"
        style="@style/text_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:text="100"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintEnd_toStartOf="@+id/followers_text"
        app:layout_constraintStart_toEndOf="@+id/following_text"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

    <TextView
        android:id="@+id/followers_text"
        style="@style/text_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:text="Followers:"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintEnd_toStartOf="@+id/followers_number"
        app:layout_constraintStart_toEndOf="@+id/following_number"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

    <TextView
        android:id="@+id/followers_number"
        style="@style/text_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:text="200"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/followers_text"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

    <RadioGroup
        android:id="@+id/bottom_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/following_text">

        <RadioButton
            android:id="@+id/radio_red"
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/posts_menu_item"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/radio_blue"
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/following_menu_item"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/radio_gray"
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/followers_menu_item"
            android:textSize="@dimen/text_size_small" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorFloatingActionButtonIcon"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_group" />

</androidx.constraintlayout.widget.ConstraintLayout>